[package]
name = "alkanes"
version = "0.2.3"
edition = "2021"
description = "ALKANES metaprotocol indexer"
license = "MIT"
repository = "https://github.com/kungfuflex/alkanes-rs"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [".", "crates/*"]


[workspace.dependencies]
anyhow = "1.0.90"
num = "0.4.3"
bitcoin = { version = "0.32.4", features = ["rand"] }
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
ordinals = { path = "./crates/ordinals" }
protorune = { path = "./crates/protorune" }
protorune-support = { path = "./crates/protorune-support" }
alkanes-support = { path = "./crates/alkanes-support" }
alkanes-runtime = { path = "./crates/alkanes-runtime" }
alkanes-macros = { path = "./crates/alkanes-macros" }
alkanes-std-factory-support = { path = "./crates/alkanes-std-factory-support" }
ruint = "1.12.3"
wasm-bindgen = "0.2.100"
byteorder = "1.5"
wasm-bindgen-test = "0.3.49"
wasmi = "0.37.2"
serde = "1.0.210"
serde_json = "1.0.128"
hex = "0.4.3"
protobuf = "3.7.1"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["Response", "Window"] }
js-sys = "0.3.72"
hex_lit = "0.1.1"
once_cell = "1.20.1"

[features]
test-utils = []
testnet = []
dogecoin = []
luckycoin = []
bellscoin = []
fractal = []
mainnet = []
proxy = []
owned_token = []
auth_token = []
genesis_alkane = []
regtest = []
genesis_protorune = []
amm_pool = ["auth_token"]
amm_factory = ["auth_token"]
amm = ["amm_pool", "amm_factory"]
orbital = []
cache = ["protorune/cache"]
all = []
minimal = [
    "refunder",
    "merkle_distributor",
    "free_mint",
    "upgradeable",
    "proxy",
]
refunder = []
merkle_distributor = []
free_mint = []
upgradeable = []
debug-log = []


[dependencies]
anyhow = { workspace = true }
num = { workspace = true }
bitcoin = { workspace = true }
metashrew-core = { workspace = true }
metashrew-support = { workspace = true }
ordinals = { workspace = true }
protorune = { workspace = true }
protorune-support = { workspace = true }
alkanes-support = { workspace = true }
ruint = { workspace = true }
wasm-bindgen = { workspace = true }
byteorder = { workspace = true }
wasm-bindgen-test = { workspace = true }
wasmi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
protobuf = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
hex_lit = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]

alkanes = { path = ".", features = [
    "genesis_alkane",
    "genesis_protorune",
    "amm",
    "orbital",
    "auth_token",
    "minimal",
] }
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", features = ["test-utils"] }
protorune = { path = "crates/protorune", features = ["test-utils"] }


[build-dependencies]
anyhow = "1.0.90"
protobuf-codegen = "3.4.0"
flate2 = "1.0.34"
protoc-rust = { version = "2.28.0" }
protoc-bin-vendored = "3.0.0"
hex = "0.4.3"
