[package]
name = "alkanes-runtime"
version = "0.1.0"
edition = "2021"
description = "ALKANES runtime library"
license = "MIT"
repository = "https://github.com/kungfuflex/alkanes-rs"
resolver = "2"

[features]
test-utils = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-support = { path = "../alkanes-support" }
anyhow = "1.0.90"
bitcoin = { version = "0.32.4", features = ["rand"] }
metashrew-support = { path = "../metashrew-support"  }
wasm-bindgen = "0.2.93"
wasm-bindgen-test = "0.3.43"
