[package]
name = "alkanes-runtime"
version = "0.2.3"
edition = "2021"
description = "ALKANES runtime library"
license = "MIT"
repository = "https://github.com/kungfuflex/alkanes-rs"
resolver = "2"

[features]
test-utils = []
panic-hook = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-support = { workspace = true }
alkanes-macros = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
metashrew-support = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }
