[package]
name = "alkanes-std-auth-token"
version = "0.2.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-runtime = { workspace = true }
alkanes-support = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { workspace = true }
