[package]
name = "alkanes-std-genesis-alkane"
version = "0.2.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
regtest = []
dogecoin = []
luckycoin = []
mainnet = []
fractal = []
bellscoin = []

[dependencies]
alkanes-runtime = { workspace = true }
alkanes-support = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { workspace = true }
