[package]
name = "alkanes-std-merkle-distributor"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-runtime = { workspace = true }
alkanes-support = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
metashrew-support = { workspace = true }
num = { workspace = true }
protorune-support = { workspace = true }
ordinals = { workspace = true }
rs_merkle = "1.4.2"
ruint = { workspace = true }
