[package]
name = "alkanes-std-orbital"
version = "0.2.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-runtime = { workspace = true }
alkanes-support = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
hex_lit = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { workspace = true }
