[package]
name = "alkanes-std-owned-token"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test = []

[dependencies]
alkanes-support = { path = "../../crates/alkanes-support" }
alkanes-runtime = { path = "../../crates/alkanes-runtime" }
metashrew-support = { path = "../../crates/metashrew-support" }
protorune-support = { path = "../../crates/protorune-support" }
alkanes-std-factory-support = { path = "../../crates/alkanes-std-factory-support" }
ordinals = { path = "../../crates/ordinals" }
anyhow = "1.0.94"
bitcoin = { version = "0.32.4", features = ["rand"] }
