[package]
name = "alkanes-std-owned-token"
version = "0.2.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test = []

[dependencies]
alkanes-support = { workspace = true }
alkanes-runtime = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { workspace = true }
alkanes-std-factory-support = { workspace = true }
ordinals = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
