[package]
name = "alkanes-std-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-runtime = { path = "../alkanes-runtime" }
alkanes-support = { path = "../alkanes-support" }
anyhow = "1.0.94"
hex = "0.4.3"
metashrew-support = { path = "../metashrew-support" }
sha2 = "0.10.8"
