[package]
name = "protorune"
version = "0.2.3"
edition = "2021"
description = "protorunes support libs for Rust sources"
license = "MIT"
repository = "https://github.com/kungfuflex/protorune-rs"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test-utils = []
mainnet = []
cache = []

[dependencies]
anyhow = "1.0.89"
bitcoin = { version = "0.32.4", features = ["rand"] }
metashrew-core = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { path = "../protorune-support" }
ordinals = { path = "../ordinals" }
ruint = { workspace = true }
wasm-bindgen = { workspace = true }
byteorder = { workspace = true }
wasm-bindgen-test = { workspace = true }
once_cell = "1.20.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
protobuf = { workspace = true }

[dev-dependencies]
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", features = ["test-utils"] }
wasm-bindgen-cli = "0.2.99"
getrandom = { version = "0.2.15", features = ["js"] }
protorune = { path = ".", features = ["test-utils"] }
